--- a/Vue-Calc/calc.css
+++ b/Vue-Calc/calc.css
@@ -31,6 +31,7 @@ body {
     box-shadow: inset 0 0 10px #000;
     border-radius: 20px;
     overflow: auto;
+    font-size: 24px;
 }
 #app > div {
     height: 3.5vw;
